@@ -20,6 +20,7 @@
     * Fixed transfer and print in ATTENTION error
     * Added function for check foldername length (from SDK)
     * Attribute file_path in job info changed to path
+    * Fix PrusaLink IP not getting reset from printer on shutdown
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
